Core #3778: Show both COMREF and Special users. Add endpoint to get special user details
